Fix header/nav overlap in certain langs
Closes bug 689819.

--- a/media/css/mozilla-base.css
+++ b/media/css/mozilla-base.css
@@ -76,7 +76,7 @@ body {
 
 #header-contents {
     bottom: 0;
-    padding-left: 270px;
+    padding-left: 295px;
     position: absolute;
     text-align: right;
 }
